--- a/.github/workflows/create-release-pr.yaml
+++ b/.github/workflows/create-release-pr.yaml
@@ -29,6 +29,7 @@ jobs:
       with:
         ref: ${{ inputs.target_branch }}
         fetch-depth: 0 # to generate complete release log
+
     - uses: cashapp/activate-hermit@e49f5cb4dd64ff0b0b659d1d8df499595451155a # v1
 
     - name: Validate input and set old version
@@ -47,7 +48,7 @@ jobs:
           VERSION=$(just get-next-patch-version)
         fi
 
-        echo "prior_version=$PRIOR_VERSION" >> $GITHUB_ENV
+        echo "prior_ref=v$PRIOR_VERSION" >> $GITHUB_ENV
         echo "version=$VERSION" >> $GITHUB_ENV
         echo "Version: $VERSION"
 
@@ -63,20 +64,15 @@ jobs:
       run: |
         git push origin "${{ env.branch_name }}"
 
+    - name: Generate release notes
+      uses: ./.github/actions/generate-release-pr-body
+      with:
+        version: ${{ env.version }}
+        head_ref: ${{ github.event.pull_request.head.sha }}
+        prior_ref: ${{ env.prior_ref }}
+
     - name: Create Pull Request
       run: |
-        cat > pr_body.txt <<EOF
-        Release version ${{ env.version }}
-
-        This PR will be merged automatically when the v${{ env.version }} tag is pushed.
-
-        Release log:
-        EOF
-
-        git fetch origin --tags
-
-        git log --pretty=format:"- %s (%h)" v${{ env.prior_version }}..HEAD >> pr_body.txt
-
         gh pr create \
           -B "$TARGET_BRANCH" \
           -H "${{ env.branch_name }}" \
