--- a/crates/goose/Cargo.toml
+++ b/crates/goose/Cargo.toml
@@ -109,6 +109,7 @@ insta = "1.43.2"
 paste = "1.0.0"
 shellexpand = "3.1.1"
 indexmap = "2.12.0"
+ignore = "0.4.25"
 
 
 [target.'cfg(target_os = "windows")'.dependencies]
