Fetch less and use the right SHA

--- a/.github/actions/generate-release-pr-body/action.yaml
+++ b/.github/actions/generate-release-pr-body/action.yaml
@@ -29,7 +29,7 @@ runs:
         PRIOR_REF: ${{ inputs.prior_ref }}
         TEMPLATE_FILE: "${{ github.action_path }}/pr_body_template.txt"
       run: |
-        git fetch origin --tags
+        git fetch origin "$HEAD_REF" "$PRIOR_REF"
 
         {
           sed -e "s/{{VERSION}}/${VERSION}/g" \
