--- a/crates/goose/Cargo.toml
+++ b/crates/goose/Cargo.toml
@@ -111,6 +111,7 @@ insta = "1.43.2"
 paste = "1.0.0"
 shellexpand = "3.1.1"
 indexmap = "2.12.0"
+libc = "0.2.177"
 
 
 [target.'cfg(target_os = "windows")'.dependencies]
