--- a/ui/desktop/package.json
+++ b/ui/desktop/package.json
@@ -68,6 +68,7 @@
     "electron-updater": "^6.6.2",
     "electron-window-state": "^5.0.3",
     "express": "^5.1.0",
+    "framer-motion": "^11.11.17",
     "gsap": "^3.13.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
