--- a/crates/goose/canonical_mapping_report.json
+++ b/crates/goose/canonical_mapping_report.json
@@ -1,5 +1,5 @@
 {
-  "timestamp": "2025-11-12T19:02:28.386534+00:00",
+  "timestamp": "2025-11-12T18:31:21.379526+00:00",
   "unmapped_models": [
     {
       "provider": "openai",
@@ -3555,54 +3555,6 @@
     }
   ],
   "all_mappings": {
-    "anthropic": [
-      {
-        "provider_model": "claude-3-5-haiku-20241022",
-        "canonical_model": "anthropic/claude-3.5-haiku",
-        "verified": true
-      },
-      {
-        "provider_model": "claude-3-7-sonnet-20250219",
-        "canonical_model": "anthropic/claude-3.7-sonnet",
-        "verified": true
-      },
-      {
-        "provider_model": "claude-3-haiku-20240307",
-        "canonical_model": "anthropic/claude-3-haiku",
-        "verified": true
-      },
-      {
-        "provider_model": "claude-3-opus-20240229",
-        "canonical_model": "anthropic/claude-3-opus",
-        "verified": true
-      },
-      {
-        "provider_model": "claude-haiku-4-5-20251001",
-        "canonical_model": "anthropic/claude-haiku",
-        "verified": true
-      },
-      {
-        "provider_model": "claude-opus-4-1-20250805",
-        "canonical_model": "anthropic/claude-opus",
-        "verified": true
-      },
-      {
-        "provider_model": "claude-opus-4-20250514",
-        "canonical_model": "anthropic/claude-opus",
-        "verified": true
-      },
-      {
-        "provider_model": "claude-sonnet-4-20250514",
-        "canonical_model": "anthropic/claude-sonnet",
-        "verified": true
-      },
-      {
-        "provider_model": "claude-sonnet-4-5-20250929",
-        "canonical_model": "anthropic/claude-sonnet",
-        "verified": true
-      }
-    ],
-    "tetrate": [],
     "openrouter": [
       {
         "provider_model": "anthropic/claude-3-haiku",
@@ -3922,6 +3874,53 @@
       {
         "provider_model": "openai/o4-mini-high",
         "canonical_model": "openai/o4-mini-high",
+        "verified": true
+      }
+    ],
+    "anthropic": [
+      {
+        "provider_model": "claude-3-5-haiku-20241022",
+        "canonical_model": "anthropic/claude-3.5-haiku",
+        "verified": true
+      },
+      {
+        "provider_model": "claude-3-7-sonnet-20250219",
+        "canonical_model": "anthropic/claude-3.7-sonnet",
+        "verified": true
+      },
+      {
+        "provider_model": "claude-3-haiku-20240307",
+        "canonical_model": "anthropic/claude-3-haiku",
+        "verified": true
+      },
+      {
+        "provider_model": "claude-3-opus-20240229",
+        "canonical_model": "anthropic/claude-3-opus",
+        "verified": true
+      },
+      {
+        "provider_model": "claude-haiku-4-5-20251001",
+        "canonical_model": "anthropic/claude-haiku",
+        "verified": true
+      },
+      {
+        "provider_model": "claude-opus-4-1-20250805",
+        "canonical_model": "anthropic/claude-opus",
+        "verified": true
+      },
+      {
+        "provider_model": "claude-opus-4-20250514",
+        "canonical_model": "anthropic/claude-opus",
+        "verified": true
+      },
+      {
+        "provider_model": "claude-sonnet-4-20250514",
+        "canonical_model": "anthropic/claude-sonnet",
+        "verified": true
+      },
+      {
+        "provider_model": "claude-sonnet-4-5-20250929",
+        "canonical_model": "anthropic/claude-sonnet",
         "verified": true
       }
     ],
@@ -4344,70 +4343,71 @@
         "verified": true
       }
     ],
-    "databricks": []
+    "databricks": [],
+    "tetrate": []
   },
   "model_counts": {
-    "openai": 625,
     "openrouter": 217,
-    "google": 50,
     "anthropic": 9,
+    "openai": 625,
     "tetrate": 0,
-    "databricks": 143
+    "databricks": 143,
+    "google": 50
   },
   "canonical_models_used": [
-    "openai/gpt-oss-20b",
-    "anthropic/claude-3.5-sonnet",
-    "anthropic/claude-3-haiku",
-    "openai/gpt-4o-audio",
-    "google/gemma-3-4b-it",
-    "openai/gpt-4.1-nano",
-    "google/gemini-2.5-flash-image",
-    "google/gemini-2.5-flash",
-    "anthropic/claude-haiku",
-    "openai/gpt-5-image",
-    "openai/gpt-3.5-turbo-16k",
-    "anthropic/claude-sonnet",
-    "openai/o3-deep-research",
-    "anthropic/claude-3-opus",
-    "openai/chatgpt-4o-latest",
-    "openai/gpt-4-turbo",
-    "anthropic/claude-3.5-haiku",
-    "openai/gpt-4o-search",
-    "openai/gpt-3.5-turbo-instruct",
-    "openai/gpt",
-    "openai/o4-mini",
-    "openai/gpt-5-mini",
-    "openai/gpt-4o:extended",
-    "openai/gpt-oss-120b:exacto",
-    "openai/o4-mini-high",
-    "openai/gpt-oss-safeguard-20b",
-    "openai/gpt-4o-mini",
-    "openai/gpt-4o-mini-search",
-    "google/gemini-2.0-flash",
-    "openai/o3-mini-high",
-    "google/gemma-3-12b-it",
-    "openai/gpt-5-nano",
-    "openai/gpt-3.5-turbo",
-    "google/gemma-3n-e4b-it",
-    "openai/o3-mini",
-    "google/gemini-2.5-flash-lite",
-    "openai/gpt-5-codex",
-    "openai/o3",
-    "anthropic/claude-opus",
-    "openai/o3-pro",
-    "openai/o1-pro",
-    "google/gemini-2.0-flash-lite",
-    "openai/gpt-4o",
-    "google/gemma-3-27b-it",
-    "openai/gpt-oss-120b",
-    "openai/o4-mini-deep-research",
-    "google/gemini-2.5-pro",
-    "openai/gpt-4.1-mini",
     "openai/gpt-5-image-mini",
-    "openai/codex-mini",
-    "anthropic/claude-3.7-sonnet",
-    "openai/gpt-5-pro",
+    "google/gemini-2.5-flash-image",
+    "openai/gpt-4.1-mini",
+    "openai/o4-mini-high",
+    "google/gemini-2.5-flash-lite",
+    "openai/gpt-4-turbo",
+    "anthropic/claude-sonnet",
+    "openai/gpt-4o-mini",
+    "google/gemma-3-4b-it",
+    "openai/gpt-3.5-turbo-instruct",
+    "openai/gpt-3.5-turbo-16k",
+    "google/gemma-3n-e4b-it",
+    "anthropic/claude-3-opus",
+    "google/gemma-3-12b-it",
+    "openai/o3",
+    "openai/gpt-oss-safeguard-20b",
+    "anthropic/claude-3.5-haiku",
+    "openai/o1-pro",
+    "openai/o3-mini",
+    "openai/chatgpt-4o-latest",
+    "openai/gpt-3.5-turbo",
+    "anthropic/claude-3-haiku",
+    "openai/gpt",
+    "openai/gpt-5-codex",
+    "openai/o3-deep-research",
     "anthropic/claude-3.7-sonnet:thinking",
-    "openai/o1"
+    "anthropic/claude-haiku",
+    "anthropic/claude-3.7-sonnet",
+    "openai/gpt-4.1-nano",
+    "openai/o4-mini",
+    "openai/o3-mini-high",
+    "openai/o4-mini-deep-research",
+    "openai/gpt-oss-120b",
+    "openai/gpt-4o-audio",
+    "openai/o3-pro",
+    "openai/gpt-5-image",
+    "google/gemini-2.5-flash",
+    "google/gemma-3-27b-it",
+    "openai/gpt-oss-20b",
+    "google/gemini-2.5-pro",
+    "anthropic/claude-3.5-sonnet",
+    "openai/o1",
+    "openai/gpt-oss-120b:exacto",
+    "openai/gpt-4o-mini-search",
+    "openai/gpt-5-pro",
+    "openai/gpt-4o",
+    "openai/codex-mini",
+    "google/gemini-2.0-flash-lite",
+    "anthropic/claude-opus",
+    "openai/gpt-4o:extended",
+    "google/gemini-2.0-flash",
+    "openai/gpt-5-mini",
+    "openai/gpt-5-nano",
+    "openai/gpt-4o-search"
   ]
 }
