--- a/ui/desktop/package.json
+++ b/ui/desktop/package.json
@@ -96,6 +96,7 @@
     "@tiptap/extension-table-header": "^2.8.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
+    "matrix-js-sdk": "^34.7.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
